many different type treatments on the home page

--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -77,6 +77,12 @@ body {
 	}
 }
 
+.thirty-five-em {
+	width: 100%;
+	max-width: 35rem;
+	margin: 0 auto !important;
+}
+
 /** FRONT PAGE - SERVICES LIST **/
 .home-services-list {
 	position: relative;
