--- a/_assets/sass/base/elements/_hr.scss
+++ b/_assets/sass/base/elements/_hr.scss
@@ -1,6 +1,6 @@
 hr {
-	background-color: $background-hr;
+	background-color: $yellow;
 	border: 0;
 	height: 1px;
-	margin-bottom: 1.5em;
+	margin-bottom: 1.5rem;
 }
