--- a/_assets/sass/abstracts/variables/_typography.scss
+++ b/_assets/sass/abstracts/variables/_typography.scss
@@ -1,5 +1,6 @@
 // stylelint-disable value-keyword-case
 $font__main: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$font__serif: "Alegreya", Times, "Times New Roman", serif;
 // stylelint-enable value-keyword-case
 $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
