--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -91,6 +91,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Plugins
 --------------------------------------------------------------*/
 
+/* Testimonial Rotator plugin
+--------------------------------------------- */
+@import "plugins/testimonial-rotator";
+
 /* Jetpack infinite scroll
 --------------------------------------------- */
 @import "plugins/jetpack/infinite-scroll";
