Blog archive page: use the most recent post's thumbnail as archive page's image, and fix incorrect top padding on page title.

--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -74,6 +74,10 @@ body {
 	.archive & {
 		max-width: 75em;
 		padding: 2.5em;
+
+		@media (min-width:900px) {
+			padding-top: 13.5rem;
+		}
 	}
 }
 
