--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -576,3 +576,8 @@ text-align:right;
 	padding-right:10vw;
 	}
 }
+
+/** FORMIDABLE OVERRIDE **/
+.with_frm_style {
+	--fieldset-bg-color: transparent !important;
+}
