correct height of bground image

--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -385,7 +385,7 @@ h1.entry-title {
 	top: 0;
 	right: 0;
 	left: 0;
-	height: 50em;
+	height: 40.313rem;
 	background-size: cover;
 	background-position:	center center;
 
