--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -2,7 +2,7 @@
 	padding-top: 5em;
 
 	@media (min-width: 900px) {
-		padding-top: 13.5em;
+		padding-top: 10em;
 	}
 
 	/** PAGE/POST COLUMN MODIFIERS **/
@@ -364,7 +364,7 @@ h1.entry-title {
 
 /* HOME PAGE */
 .home-hero-wrapper .social {
-	margin-top: 11em;
+	margin-top: 9em;
 }
 
 .home-logo {
@@ -385,9 +385,16 @@ h1.entry-title {
 	top: 0;
 	right: 0;
 	left: 0;
-	height: 40.313rem;
+	height: 40.375rem;
 	background-size: cover;
 	background-position:	center center;
+	// angled bottom line
+	clip-path: polygon(0 0, 100% 0, 100% 500px, 0% 100%);
+
+	.home & {
+		height: 44rem;
+		clip-path: polygon(0 0, 100% 0, 100% 545px, 0% 100%);
+	}
 
 	.mask {
 		width: 100%;
@@ -402,6 +409,7 @@ h1.entry-title {
 }
 
 /** SLANT **/
+/*
 .slant {
 	background-color: #152329;
 	-webkit-transform: skew(-5deg) rotate(-5deg);
@@ -464,7 +472,6 @@ h1.entry-title {
 		overflow: visible;
 		background-color: transparent;
 
-		/*
 		@media (min-width: 600px) {
 			margin-top: -67px;
 			margin-bottom: -67px;
@@ -473,7 +480,6 @@ h1.entry-title {
 			margin-top: -100px;
 			margin-bottom: -100px;
 		}
-		*/
 	}
 	.slant__content {
 		-webkit-transform: none;
@@ -576,6 +582,7 @@ text-align:right;
 	padding-right:10vw;
 	}
 }
+*/
 
 /** FORMIDABLE OVERRIDE **/
 .with_frm_style {
