--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ button.site-nav__btn {
   /** PAGE/POST COLUMN MODIFIERS **/ }
   @media (min-width: 900px) {
     .site-main {
-      padding-top: 13.5em; } }
+      padding-top: 10em; } }
   .site-main .narrow {
     max-width: 40.25em;
     margin: 0 auto; }
@@ -1209,7 +1209,7 @@ h1.entry-title {
 
 /* HOME PAGE */
 .home-hero-wrapper .social {
-  margin-top: 11em; }
+  margin-top: 9em; }
 
 .home-logo {
   width: 100%;
@@ -1227,9 +1227,15 @@ h1.entry-title {
   top: 0;
   right: 0;
   left: 0;
-  height: 40.313rem;
+  height: 40.375rem;
   background-size: cover;
-  background-position: center center; }
+  background-position: center center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 500px, 0% 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 500px, 0% 100%); }
+  .home .large-post-thumbnail-wrapper {
+    height: 44rem;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 545px, 0% 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 545px, 0% 100%); }
   .large-post-thumbnail-wrapper .mask {
     width: 100%;
     height: 100%;
