--- a/_assets/sass/components/_footer.scss
+++ b/_assets/sass/components/_footer.scss
@@ -9,6 +9,7 @@
 	-webkit-filter: drop-shadow(0 0 30px rgba(0,0,0,.6));
 	filter: drop-shadow(0 0 30px rgba(0,0,0,.6));
 	overflow-x: clip;
+	z-index: 10;
 }
 .site-footer .mark {
 	margin: 0 auto 32px;
